Prevent jumping when nav gets fixed

--- a/templates/eqdkp_clean/eqdkp_clean.css
+++ b/templates/eqdkp_clean/eqdkp_clean.css
@@ -4620,3 +4620,7 @@ html, body {
 	height: auto;
 	display: block;
 }
+
+.jsFixedBody .portal {
+	margin-top: 47px;
+}
